<resources>
    <string name="app_name">Provision</string>
    <string name="wellcome_openfde">欢迎使用OpenFDE</string>
    <string name="suw_next_button_label">Next</string>

    <!-- Button for going to the previous screen or step [CHAR LIMIT=20] -->
    <string name="suw_back_button_label">Back</string>

    <!-- Button for scrolling down to reveal more content on the screen [CHAR LIMIT=20] -->
    <string name="suw_more_button_label">More</string>

    <string name="system_default_timezone">GMT</string>
    <string name="hello">Hello!</string>

    <string name="tip_text">Press anywhere to start.</string>
    <string name="start_setting">start setting</string>
    <string name="activating_success">Activating success</string>
    <string name="prev_button_text">Prev</string>
    <string name="next_button_text">Next</string>
    <string name="return_button_text">Return</string>
    <string name="done_button_text">Done</string>
    <string name="setup_succeeded">Setup completion</string>
    <string name="finish_button_text">start to use</string>
    <string name="wifi_title_text">Select network</string>
    <string name="wifi_lv_title_text">Choose a network</string>
    <string name="wifi_summary_text">Infinite network</string>
    <string name="wait_moment">wait moment</string>
    <string name="connecting">Connecting...</string>
    <string name="connected">Connected</string>
    <string name="connect_fail">Connection failed</string>
    <string name="input_password">please input password</string>
    <string name="customized_title_text">Customized content configuration successfully</string>
    <string name="custom_wallpaper">Custom wallpaper</string>
    <string name="wifi_password">Password</string>

    <string name="language_panel_text">Choose language</string>
    <string name="keyboard_panel_text">Choose keyboard</string>
    <string name="application_panel_text">Choose application</string>
    <string name="location_panel_text">Choose city</string>
    <string name="skip_button_text">Skip</string>
    <string name="date_and_time">Select time zone</string>
    <string name="sim_network_title_text">Sim network</string>
    <string name="sim_network_value_text">No SIM card inserted</string>
    <string name="cancel_text">Cancel</string>
    <string name="connect_text">Connect</string>
    <string name="wifi_loading_text">Loading...</string>
    <string name="finish">Finish!</string>
    <string name="locale_remove_menu">Remove</string>

    <string name="language_hint">Long press to drag and adjust the order</string>
    <string name="locale_not_translated">May not be available in some apps</string>
    <string name="add_a_language">add a language</string>
    <string name="dlg_remove_locales_error_title">Can’t remove all languages</string>
    <string name="dlg_remove_locales_error_message">Keep at least one preferred language</string>
    <string name="dlg_remove_locales_message">Text will be displayed in another language.</string>
    <plurals name="dlg_remove_locales_title">
        <item quantity="one">Remove selected language?</item>
        <item quantity="other">Remove selected languages?</item>
    </plurals>

    <string name="gps_panel_text">Choose location</string>
    <string name="gps_country">Country</string>
    <string name="gps_province">Province</string>
    <string name="gps_city">City</string>

    <string name="time_panel_text">Choose Time</string>
    <string name="region_zone">Time zone</string>
    <string name="time_format">Use 24-hour format</string>
    <string name="region">Region</string>

    <string name="region_zone_information" translatable="false">%1$s (%2$s)</string>

    <string name="network_not_available">The network seems to be having some issues, tap to refresh</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="skip">Skip</string>
    <string name="download">Download</string>
    <string name="cancel">Cancel</string>

    <string name="start_download">Start download</string>
    <string name="download_failed">Download failed</string>
    <string name="retry">Retry</string>


    <string name="installing">Installing</string>
    <string name="installed">Installed</string>

    <string name="unfinished_task_message">There are tasks that have not been downloaded completely. Do you want to proceed directly?</string>
    <string name="exit_install_button_label">Exit Installation</string>
    <string name="continue_install_button_label">Continue Installation</string>

</resources>