<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="10dp">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="18dp"
            android:paddingBottom="18dp">

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="5dp"
                android:text="@string/unfinished_task_message"
                android:textColor="@color/_xpopup_content_color"
                android:textSize="16sp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:background="@color/_xpopup_list_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_download"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_button_continue"

            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/continue_install_button_label"
            android:textColor="#666666"
            android:textSize="16sp" />

        <View
            android:id="@+id/divider2"
            android:layout_width=".5dp"
            android:layout_height="match_parent"
            android:background="@color/_xpopup_list_divider" />

        <TextView
            android:id="@+id/tv_proceed"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_button_exit"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/exit_install_button_label"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>